// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Separator renders the separator component when type is horizontal 1`] = `
<div
  className="horizontal-separator"
/>
`;

exports[`(Component) Separator renders the separator component when type is vertical 1`] = `
<div
  className="vertical-separator"
/>
`;

exports[`(Component) Separator renders without crashing 1`] = `
<div
  className="horizontal-separator"
/>
`;
